correct Sonar critical remarks